modules/ec2/main.tf
resource "aws_instance" "jenkins_ec2" {
  ami           = var.instance_ami
  instance_type = var.instance_type

  subnet_id = var.subnet_id
  vpc_security_group_ids = [ aws_security_group.jenkins_ec2_sg.id ]
  associate_public_ip_address = true

  ebs_block_device {
    device_name = "/dev/sda1"
    volume_size = 20
    volume_type = "gp2"
  }

  metadata_options {
    http_endpoint               = "enabled"
    instance_metadata_tags      = "enabled"
    http_tokens                 = "required"
    http_put_response_hop_limit = 2
  }

  iam_instance_profile = var.instance_iam_profile

  user_data_replace_on_change = true
  user_data = <<-EOF
  #!/bin/bash
  set -e
  echo "test" > /home/ubuntu/proof.txt
  sudo apt update && sudo apt upgrade -y
  sudo wget -O /usr/share/keyrings/jenkins-keyring.asc \
    https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key
  echo "deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc]" \
    https://pkg.jenkins.io/debian-stable binary/ | sudo tee \
    /etc/apt/sources.list.d/jenkins.list > /dev/null
  sudo apt-get update
  sudo apt-get install fontconfig openjdk-17-jre -y
  sudo apt-get install jenkins -y
  sudo systemctl enable jenkins
  sudo systemctl start jenkins
  EOF
}

resource "aws_security_group" "jenkins_ec2_sg" {
  name        = "jenkins-ec2-sg"
  description = "Ingress/Egress rules for Jenkins EC2 access"
  vpc_id      = var.vpc_id
}

resource "aws_vpc_security_group_ingress_rule" "jenkins_ec2_allow_ec2_instance_connect" {
  security_group_id = aws_security_group.jenkins_ec2_sg.id
  description       = "Allow SSH port for EC2 instance connect"
  prefix_list_id    = var.ec2_instance_connect_prefix_list
  ip_protocol       = "tcp"
  from_port         = "22"
  to_port           = "22"
}

resource "aws_vpc_security_group_ingress_rule" "jenkins_ec2_allow_http" {
  security_group_id = aws_security_group.jenkins_ec2_sg.id
  description       = "Allow HTTP access from all"
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "tcp"
  from_port         = "80"
  to_port           = "80"
}

resource "aws_vpc_security_group_ingress_rule" "jenkins_ec2_allow_https" {
  security_group_id = aws_security_group.jenkins_ec2_sg.id
  description       = "Allow HTTPS access from all"
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "tcp"
  from_port         = "443"
  to_port           = "443"
}

resource "aws_vpc_security_group_ingress_rule" "jenkins_ec2_allow_8080" {
  security_group_id = aws_security_group.jenkins_ec2_sg.id
  description       = "Allow port 8080 access from all"
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "tcp"
  from_port         = "8080"
  to_port           = "8080"
}

resource "aws_vpc_security_group_egress_rule" "jenkins_ec2_allow_egress_all" {
  security_group_id = aws_security_group.jenkins_ec2_sg.id
  description       = "Allow egress to all"
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = -1
}
